spacing issue fixed

--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -3758,6 +3758,9 @@ opacity: .3;
 }
 
 .company_input{
-  width:96% !important;
+ padding-right:37px;
 }
-
+.company_Edit_Fields
+{
+  padding-right: 20px;
+}
